# ai-chess

./: .gitignore  LICENSE  README.md  azure.yaml  create-game.sh  next-steps.md  pyproject.toml
chat-ui/: .dockerignore  .env.example  .npmrc  Dockerfile  package-lock.json  package.json  server.js  svelte.config.js  tailwind.config.cjs  tsconfig.json
chat-ui/src/: app.html  app.postcss
chat-ui/src/lib/: form.ts  prompt.ts
chat-ui/src/lib/actions/: additional-svelte-jsx.d.ts  clickOutside.ts
chat-ui/src/lib/components/: Button.svelte  Footer.svelte  Header.svelte  MenuLink.svelte  Nav.svelte
chat-ui/src/lib/components/chat/: ChatMessage.svelte  ChatMessagesBody.svelte  ConversationHeader.svelte  LinkComponent.svelte
chat-ui/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
chat-ui/src/routes/about/: +page.svelte
chat-ui/src/routes/api/board/[id]/: +server.ts
chat-ui/src/routes/api/chat/: +server.ts
chat-ui/src/routes/api/chat/clear/: +server.ts
chat-ui/src/routes/api/fragments/: +server.ts
chat-ui/src/routes/api/fragments/[id]/: +server.ts
chat-ui/src/routes/api/prompts/: +server.ts
chat-ui/src/routes/api/prompts/[id]/: +server.ts
chat-ui/src/routes/api/search/: +server.ts
chat-ui/src/routes/api/status/: +server.ts
chat-ui/src/routes/api/vote/: +server.ts
chat-ui/src/routes/architect/: +page.svelte
chat-ui/src/routes/chess/: +page.svelte
chat-ui/src/routes/diagnostics/: +page.server.ts  +page.svelte
chat-ui/src/routes/kitchensink/: +page.svelte
chat-ui/src/routes/prompts/: +page.svelte  +page.ts
chat-ui/src/routes/prompts/[id]/: +page.server.ts  +page.svelte  +page.ts
chess-api/: Dockerfile  index.js  package-lock.json  package.json
chess-api/api/controllers/: chessTwoPlayersController.js
chess-api/api/models/: chessboardModel.js  db.js
game-service/: Dockerfile  pyproject.toml
game-service/game_service/: commentator_agent.py  create_game.py  game_state.py  main.py  model.py  mongo_utils.py  openai_utils.py  telemetry.py  vote_agent.py  vote_service.py
game-service/tests/: chess_tests.py  load_tests.py  prompt_tests.py  state_tests.py
infra/: main.bicep  main.parameters.json
infra/app/: chat-ui.bicep  chess-api.bicep  db-cosmos-mongo.bicep  game-service.bicep  rag-service.bicep  stockfish-server.bicep  stockfish.bicep
rag-service/: Dockerfile  README.md  pyproject.toml
rag-service/rag_service/: ai_retriever.py  config.py  main.py  openai_helper.py  prompts.py  vector_search.py
stockfish-server/: Dockerfile  package-lock.json  package.json  server.js
