[tool.poetry]
name = "rag-service"
version = "0.1.0"
description = ""
authors = ["PJ <pj>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
openai= "1.30.3"
fastapi="^0.110.1"
langchain-core="^0.2.3"
langchain-openai="^0.1.8"
langchain="^0.2.1"
tiktoken="^0.7.0"
langchain-mongodb="0.1.5"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-instrumentation-requests = "^0.45b0"
azure-monitor-opentelemetry-exporter = "^1.0.0b25"
opentelemetry-instrumentation-fastapi = "^0.45b0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
locust = "2.18.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
